Adição do footer e linha de Vitrines

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comercial Zero 15</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="style/footer.css">
   <link rel="stylesheet" href="style/style.css" />
   <link rel="stylesheet" href="style/carrosel.css">
   <link rel="stylesheet" href="style/menu.css">
@@ -28,7 +30,7 @@
           <a href="#">Produtos</a>
           <ul class="submenu">
             <li><a href="freezers.html">Freezers</a></li>
-            <li><a href="#">Vitrines</a></li>
+            <li><a href="vitrines.html">Vitrines</a></li>
             <li><a href="#">Cocção</a></li>
             <li><a href="#">Comercial</a></li>
             <li><a href="#">Distribuição</a></li>
@@ -82,6 +84,49 @@
     </div>
     <button class="seta direita">&#10095;</button>
   </section>
+  <footer class="footer">
+    <div class="footer-conteudo">
+  
+      <!-- Pagamento -->
+      <div class="pagamentos">
+        <h4>Formas de pagamento</h4>
+        <div class="icones-pagamento">
+          <i class="fa-brands fa-cc-visa"></i>
+          <i class="fa-brands fa-cc-mastercard"></i>
+          <i class="fa-solid fa-barcode"></i>
+          <i class="fa-solid fa-money-bill-wave"></i> <!-- Usado como Pix genérico -->
+        </div>
+      </div>
+  
+      <!-- Selo de confiança -->
+      <div class="selo-confianca">
+        <h4>Site seguro</h4>
+        <div class="selo">
+          <i class="fa-solid fa-shield-halved"></i>
+          <span>Compra protegida</span>
+        </div>
+      </div>
+  
+      <!-- Contato e redes sociais -->
+      <div class="contatof">
+        <h4>Fale conosco</h4>
+        <div class="contato-itens">
+          <p><i class="fa-brands fa-whatsapp"></i> (15) 99999-9999</p>
+          <p><i class="fa-solid fa-envelope"></i> contato@comercialzero15.com.br</p>
+        </div>
+        <div class="redes-sociais">
+          <a href="#" ><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#" ><i class="fa-brands fa-instagram"></i></a>
+          <a href="#" ><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+      </div>
+  
+    </div>
+  
+    <div class="direitos">
+      <p>&copy; 2025 Comercial Zero15 - Todos os direitos reservados.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
