Adicionado linha de bar

--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         <li class="dropdown">
           <a href="#">Produtos</a>
           <ul class="submenu">
-            <li><a href="freezers.html">Freezers</a></li>
-            <li><a href="vitrines.html">Vitrines</a></li>
+            <li><a href="bar.html">Bar</a></li>
             <li><a href="#">Cocção</a></li>
             <li><a href="#">Comercial</a></li>
             <li><a href="#">Distribuição</a></li>
+            <li><a href="freezers.html">Freezers</a></li>
+            <li><a href="vitrines.html">Vitrines</a></li> 
           </ul>
         </li>
         <li><a href="sobre.html">Sobre nós</a></li>
@@ -71,17 +72,18 @@
   <section class="carrossel-produtos">
     <button class="seta esquerda">&#10094;</button>
     <div class="container-produtos" id="slider">
-      <div class="produto"><img src="img/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
-      <div class="produto"><img src="img/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
-      <div class="produto"><img src="img/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
-      <div class="produto"><img src="img/CHAR BROILER - LINHA COMERCIAL.png" alt="Linha Comercial"><p>Linha Comercial</p></div>
-      <div class="produto"><img src="img/teste.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
-      <div class="produto"><img src="img/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
-      <div class="produto"><img src="img/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
-      <div class="produto"><img src="img/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
-      <div class="produto"><img src="img/CHAR BROILER - LINHA COMERCIAL.png" alt="Linha Comercial"><p>Linha Comercial</p></div>
-      <div class="produto"><img src="img/teste.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
-    </div>
+      <div class="produto"><img src="img//carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
+      <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
+      <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
+      <div class="produto"><img src="img/carrosel/CHAR BROILER - LINHA COMERCIAL.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
+      <div class="produto"><img src="img/carrosel/teste.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
+      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Carin Comercial"><p>Linha Bar</p></div>
+      <div class="produto"><img src="img//carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
+      <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
+      <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
+      <div class="produto"><img src="img/carrosel/CHAR BROILER - LINHA COMERCIAL.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
+      <div class="produto"><img src="img/carrosel/teste.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
+      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Carin Comercial"><p>Linha Bar</p></div>
     <button class="seta direita">&#10095;</button>
   </section>
   <footer class="footer">
