--- a/sobre.html
+++ b/sobre.html
@@ -29,11 +29,12 @@
         <li class="dropdown">
           <a href="#" class="active">Produtos</a>
           <ul class="submenu">
-            <li><a href="#">Freezers</a></li>
-            <li><a href="vitrines.html">Vitrines</a></li>
+            <li><a href="bar.html">Bar</a></li>
             <li><a href="#">Cocção</a></li>
             <li><a href="#">Comercial</a></li>
             <li><a href="#">Distribuição</a></li>
+            <li><a href="freezers.html">Freezers</a></li>
+            <li><a href="vitrines.html">Vitrines</a></li> 
           </ul>
         </li>
         <li><a href="sobre.html">Sobre nós</a></li>
