Adição das descrições dos produtos

--- a/bar.html
+++ b/bar.html
@@ -59,9 +59,15 @@
     <div class="texto-vitrine">
       <h2>Balcão de Chopp 3 Portas</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção externa e interna em aço inoxidável <br>
+        • Fundo traseiro externo em aluminio<br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura<br>• Barreiras térmicas em perfis de PVC<br>
+        • Portas com fechamento magnético<br>
+        • Dobradiças em aço inoxidável<br>
+        • Controle da temperatura através de termocontrolador digital<br>
+        • Sapatas para ajuste de altura<br>
+        • Temperatura de trabalho:<br>
+        • Balcão de chopp: +2°C a +6°C | Gás ecológico de Refrigeração: R134a<br>
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -78,9 +84,12 @@
     <div class="texto-vitrine">
       <h2>Bar Station</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção em aço inoxidável <br>
+        • Placa de altileno<br>
+        • Suporte de garrafas<br>
+        • Gavetas para resíduos<br>
+        • Lava copos<br>
+        • Sapatas confeccionadas em nylon para ajuste de altura
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -98,10 +107,15 @@
     <div class="texto-vitrine">
       <h2>Conservador de Canecas</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
-      </h3>
+        • Construção em aço inoxidável <br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura<br>• Barreiras térmicas em perfis de PVC<br>
+        • Frost Free<br>
+        • Prateleira interna regulável<br>
+        • Tampa deslizante<br>
+        • Controle da temperatura através de termocontrolador digital<br>
+        • Rodizios<br>
+        • Temperatura de trabalho: -15°C a -18°C<br>• Gás ecológico de Refrigeração R404a
+        </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
     <div class="imagem-vitrine">
@@ -116,9 +130,10 @@
     <div class="texto-vitrine">
       <h2>Módulo Copos</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção em aço inoxidável <br>
+        • Sobrefundo perfurado em aço inoxidável<br>
+        • Isolamento térmico em poliuretano expandido<br>
+        • Sapatas para ajuste de altura
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -134,9 +149,8 @@
       <div class="texto-vitrine">
         <h2>Módulo Cuba de Bancada</h2>
         <h3>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-          Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-          quam dolore qui explicabo enim!
+              • Construção em aço inoxidável <br>
+              • Isolamento térmico em poliuretano expandido
         </h3>
         <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
       </div>
@@ -151,9 +165,12 @@
         <div class="texto-vitrine">
           <h2>Módulo Drinks</h2>
           <h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-            Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-            quam dolore qui explicabo enim!
+            • Construção em aço inoxidável <br>
+            • Placa de altileno<br>
+            • 04 GN de 1/6×100<br>
+            • 06 GN de 1/9×100<br>
+            • Suporte de garrafas<br>
+            • Sapatas confeccionadas em nylon para ajuste de altura
           </h3>
           <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
         </div>
@@ -168,9 +185,10 @@
           <div class="texto-vitrine">
             <h2>Módulo Gelo</h2>
             <h3>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-              Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-              quam dolore qui explicabo enim!
+              • Construção em aço inoxidável <br>
+              • Tampa deslizante em aço inoxidável<br>
+              • Isolamento térmico em poliuretano expandido<br>
+              • Sapatas para ajuste de altura
             </h3>
             <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
           </div>
@@ -185,9 +203,8 @@
             <div class="texto-vitrine">
               <h2>Módulo Preparo</h2>
               <h3>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-                Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-                quam dolore qui explicabo enim!
+                • Construção em aço inoxidável <br>
+                • Sapatas confeccionadas em nylon para ajuste de altura
               </h3>
               <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
             </div>
