--- a/freezers.html
+++ b/freezers.html
@@ -58,9 +58,17 @@
     <div class="texto-vitrine">
       <h2>Refrigerador com 4, 6 ou 8 Gavetas</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção externa em aço inoxidável<br>
+        • Construção interna em aço inoxidável<br>
+        • Fundo traseiro externo em aluminio<br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura <br>• Barreiras térmicas em perfis de PVC.;<br>
+        • Gavetas com fechamento magnético.<br>
+        • Trilhos em aço inoxidável<br>
+        • Gavetas perfuradas para receber GN 1/1×65<br>
+        • Controle da temperatura através de termocontrolador digital<br>
+        • Sapatas confeccionadas em nylon para ajuste de altura<br>
+        • Temperatura de trabalho:<br>
+        • Refrigerador: +2°C a +6°C | Gás ecológico de Refrigeração: R134a
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -79,9 +87,9 @@
     <div class="texto-vitrine">
       <h2>Cabeçote Refrigerado</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Cabeçote refrigerado (make table) construído em aço inoxidável<br>
+        • Com capacidade para receber gns 1/3x100mm ou 1/6x100mm (não inclusos)<br>
+        • Tampa com regulagem de abertura
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -98,9 +106,18 @@
     <div class="texto-vitrine">
       <h2>Mini Câmara Refrigerada  1 a 3 Portas</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção externa em aço inoxidável<br>
+        • Construção interna em alumínio<br>
+        • Fundo traseiro externo em aluminio<br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura <br>• Barreiras térmicas em perfis de PVC.;<br>
+        • Portas com fechamento magnético.<br>
+        • Dobradiças em aço inoxidável<br>
+        • Grade aramada com pintura epóxi por vão de porta<br>
+        • Controle da temperatura através de termocontrolador digital<br>
+        • Sapatas confeccionadas em nylon para ajuste de altura<br>
+        • Temperatura de trabalho:<br>
+        • Refrigerador: +2°C a +6°C | Gás ecológico de Refrigeração: R134a<br>
+        • Freezer: -15°C à -18°C | Gás ecológico de Refrigeração: R404A<br>
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -119,9 +136,17 @@
     <div class="texto-vitrine">
       <h2>Refrigerador e Freezer De Base Com Porta</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção externa em aço inoxidável<br>
+        • Construção interna em alumínio<br>
+        • Fundo traseiro externo em aluminio<br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura <br>• barreiras térmicas em perfis de PVC.;<br>
+        • Portas com fechamento magnético.<br>
+        • Dobradiças em aço inoxidável<br>
+        • Grade aramada com pintura epóxi por vão de porta<br>
+        • Controle da temperatura através de termocontrolador digital<br>
+        • Sapatas confeccionadas em nylon para ajuste de altura<br>
+        • Temperatura de trabalho:<br>
+        • Refrigerador: +2°C a +6°C | Gás ecológico de Refrigeração: R134a<br>
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -139,9 +164,17 @@
     <div class="texto-vitrine">
       <h2>Refrigerador Horizontal 2 a 4 Portas</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção externa em aço inoxidável<br>
+        • Construção interna em alumínio<br>
+        • Fundo traseiro externo em aluminio<br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura <br>• Barreiras térmicas em perfis de PVC.;
+        • Portas com fechamento magnético.<br>
+        • Dobradiças em aço inoxidável<br>
+        • Grade aramada com pintura epóxi por vão de porta<br>
+        • Controle da temperatura através de termocontrolador digital<br>
+        • Sapatas confeccionadas em nylon para ajuste de altura<br>
+        • Temperatura de trabalho:<br>
+        • Freezer: -15°C à -18°C | Gás ecológico de Refrigeração: R404A<br>
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -160,9 +193,17 @@
     <div class="texto-vitrine">
       <h2>Refrigerador Vertical</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção externa em aço inoxidável<br>
+        • Construção interna em alumínio<br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura<br>• Barreiras térmicas em perfis de PVC.;<br>
+        • Portas com fechamento magnético.<br>
+        • Dobradiças em aço inoxidável<br>
+        • Grade aramada com pintura epóxi por vão de porta<br>
+        • Controle da temperatura através de termocontrolador digital<br>
+        • Sapatas confeccionadas em nylon para ajuste de altura<br>
+        • Temperatura de trabalho:<br>
+        • Refrigerador: +2°C a +6°C | Gás ecológico de Refrigeração: R134a<br>
+        • Freezer: -15°C à -18°C | Gás ecológico de Refrigeração: R404A<br>
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
