--- a/vitrines.html
+++ b/vitrines.html
@@ -58,9 +58,14 @@
     <div class="texto-vitrine">
       <h2>Vitrine Neutra</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • 2 Prateleiras em vidro reguláveis <br>
+        • Portas deslizantes, independente do tamanho são duas portas<br>
+        • Possui espelho nas portas internamente<br>
+        • Iluminação em led branco quente<br>
+        • Iluminação no teto e em cada prateleira, todos os níveis iluminados<br>
+        • Sistema frost free, dispensa dreno;<br>
+        • Vidros temperados serigrafado preto<br>
+        • Sapata niveladora para ajuste de altura
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -77,10 +82,15 @@
     <div class="texto-vitrine">
       <h2>Vitrine Refrigerada</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
-      </h3>
+        • 2 Prateleiras em vidro reguláveis <br>
+        • Portas deslizantes, independente do tamanho são duas portas<br>
+        • Possui espelho nas portas internamente<br>
+        • Iluminação em led branco quente<br>
+        • Iluminação no teto e em cada prateleira, todos os níveis iluminados<br>
+        • Sistema frost free, dispensa dreno;<br>
+        • Vidros temperados serigrafado preto<br>
+        • Sapata niveladora para ajuste de altura
+              </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
     <div class="imagem-vitrine">
@@ -97,9 +107,14 @@
     <div class="texto-vitrine">
       <h2>Vitrine Aquecida</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • 2 Prateleiras em vidro reguláveis <br>
+        • Portas deslizantes, independente do tamanho são duas portas<br>
+        • Possui espelho nas portas internamente<br>
+        • Iluminação em led branco quente<br>
+        • Iluminação no teto e em cada prateleira, todos os níveis iluminados<br>
+        • Sistema frost free, dispensa dreno;<br>
+        • Vidros temperados serigrafado preto<br>
+        • Sapata niveladora para ajuste de altura
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
@@ -115,9 +130,12 @@
     <div class="texto-vitrine">
       <h2>Vitrine para Sushi</h2>
       <h3>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus fugit est illum? <br>
-        Optio aspernatur, consequuntur culpa autem magni pariatur, ipsa natus necessitatibus quo amet perspiciatis <br>
-        quam dolore qui explicabo enim!
+        • Construção em aço inoxidável <br>
+        • Portas de vidro deslizantes<br>
+        • Iluminação em LED<br>
+        • Vidro temperado<br>
+        • Refrigeração por meio de serpentina de cobre<br>
+        • Sapata niveladora para ajuste de altura
       </h3>
       <a href="https://wa.me/5511999999999" target="_blank" class="btn-orcamento">Peça já um orçamento</a>
     </div>
