--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
       <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
       <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
       <div class="produto"><img src="img/carrosel/CHAR BROILER - LINHA COMERCIAL.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
-      <div class="produto"><img src="img/carrosel/teste.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
+      <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
       <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Carin Comercial"><p>Linha Bar</p></div>
       <div class="produto"><img src="img//carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
       <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
       <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
       <div class="produto"><img src="img/carrosel/CHAR BROILER - LINHA COMERCIAL.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
-      <div class="produto"><img src="img/carrosel/teste.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
+      <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
       <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Carin Comercial"><p>Linha Bar</p></div>
     <button class="seta direita">&#10095;</button>
   </section>
