Correção de descrição de produtos

--- a/freezers.html
+++ b/freezers.html
@@ -61,8 +61,8 @@
         • Construção externa em aço inoxidável<br>
         • Construção interna em aço inoxidável<br>
         • Fundo traseiro externo em aluminio<br>
-        • Isolamento térmico em poliuretano expandido com 50 mm de espessura <br>• Barreiras térmicas em perfis de PVC.;<br>
-        • Gavetas com fechamento magnético.<br>
+        • Isolamento térmico em poliuretano expandido com 50 mm de espessura <br>• Barreiras térmicas em perfis de PVC<br>
+        • Gavetas com fechamento magnético<br>
         • Trilhos em aço inoxidável<br>
         • Gavetas perfuradas para receber GN 1/1×65<br>
         • Controle da temperatura através de termocontrolador digital<br>
