--- a/vitrines.html
+++ b/vitrines.html
@@ -63,7 +63,7 @@
         • Possui espelho nas portas internamente<br>
         • Iluminação em led branco quente<br>
         • Iluminação no teto e em cada prateleira, todos os níveis iluminados<br>
-        • Sistema frost free, dispensa dreno;<br>
+        • Sistema frost free, dispensa dreno<br>
         • Vidros temperados serigrafado preto<br>
         • Sapata niveladora para ajuste de altura
       </h3>
