Adição do icone no navegador

--- a/vitrines.html
+++ b/vitrines.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style/carrosel.css">
   <link rel="stylesheet" href="style/menu.css">
   <link rel="stylesheet" href="style/footer.css">
+  <link rel="icon" href="img/logoJ.png" type="image/png">
   <script src="script/script.js" defer></script>
 </head>
 
