--- a/vitrines.html
+++ b/vitrines.html
@@ -20,7 +20,9 @@
       ☰
     </div>
     <div class="logo">
-      <img src="img/logo.png" alt="Logo" />
+      <a href="index.html">
+      <img  src="img/logo.png" alt="Logo" />
+    </a>
     </div>
     <nav>
       <ul class="menu">
