--- a/index.html
+++ b/index.html
@@ -69,22 +69,25 @@
   
 
   <section class="carrossel-produtos">
-    <button class="seta esquerda">&#10094;</button>
     <div class="container-produtos" id="slider">
-      <div class="produto"><img src="img//carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
+      <!-- Lista original -->
+      <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
       <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
       <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
       <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
       <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
-      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Carin Comercial"><p>Linha Bar</p></div>
-      <div class="produto"><img src="img//carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
+      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar"><p>Linha Bar</p></div>
+  
+      <!-- Duplicados manualmente -->
+      <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
       <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
       <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
       <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
       <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
-      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Carin Comercial"><p>Linha Bar</p></div>
-    <button class="seta direita">&#10095;</button>
+      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar"><p>Linha Bar</p></div>
+    </div>
   </section>
+  
   <footer class="footer">
     <div class="footer-conteudo">
   
