--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
     <div class="logo">
       <a href="index.html">
-        <img  src="img/logo.png" alt="Logo" />
+        <img src="img/logo.png" alt="Logo" />
       </a>
     </div>
     <nav>
       <ul class="menu">
         <li><a href="index.html" class="active">Home</a></li>
-        
+
         <li class="dropdown">
           <a href="#">Produtos</a>
           <ul class="submenu">
@@ -36,13 +36,14 @@
             <li><a href="#">Comercial</a></li>
             <li><a href="#">Distribuição</a></li>
             <li><a href="freezers.html">Freezers</a></li>
-            <li><a href="vitrines.html">Vitrines</a></li> 
+            <li><a href="vitrines.html">Vitrines</a></li>
           </ul>
         </li>
         <li><a href="sobre.html">Sobre nós</a></li>
       </ul>
       <div class="contato">
-        <a href="https://wa.me/5515996404285?text=Ol%C3%A1%2C%20gostaria%20de%20realizar%20um%20or%C3%A7amento%21" target="_blank">
+        <a href="https://wa.me/5515996404285?text=Ol%C3%A1%2C%20gostaria%20de%20realizar%20um%20or%C3%A7amento%21"
+          target="_blank">
           <img src="img/whats.png" alt="WhatsApp" /> Entre em contato
         </a>
       </div>
@@ -55,42 +56,62 @@
         <h1>Soluções Industriais para sua Empresa</h1>
         <h2>Freezers, Congelador de canecas<br> Vitrines, Refrigeradores, Fogões e Chapas</h2>
         <div class="botao-banner">
-          <a 
-            href="https://wa.me/5515996404285?text=Ol%C3%A1%2C%20gostaria%20de%20realizar%20um%20or%C3%A7amento%21" 
-            target="_blank" 
-            class="btn-orcamento"
-          >
+          <a href="https://wa.me/5515996404285?text=Ol%C3%A1%2C%20gostaria%20de%20realizar%20um%20or%C3%A7amento%21"
+            target="_blank" class="btn-orcamento">
             Peça já seu orçamento
           </a>
         </div>
       </div>
     </section>
-  </main>
-  
+    <section class="carrossel-produtos">
+      <div class="container-produtos" id="slider">
+        <!-- Lista original -->
+        <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário">
+          <p>Linha Mobiliário</p>
+        </div>
+        <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines">
+          <p>Linha Vitrines</p>
+        </div>
+        <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição">
+          <p>Linha Distribuição</p>
+        </div>
+        <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção">
+          <p>Linha Cocção</p>
+        </div>
+        <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial">
+          <p>Linha Carin Comercial</p>
+        </div>
+        <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar">
+          <p>Linha Bar</p>
+        </div>
 
-  <section class="carrossel-produtos">
-    <div class="container-produtos" id="slider">
-      <!-- Lista original -->
-      <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
-      <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
-      <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
-      <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
-      <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
-      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar"><p>Linha Bar</p></div>
-  
-      <!-- Duplicados manualmente -->
-      <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário"><p>Linha Mobiliário</p></div>
-      <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines"><p>Linha Vitrines</p></div>
-      <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição"><p>Linha Distribuição</p></div>
-      <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção"><p>Linha Cocção</p></div>
-      <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial"><p>Linha Carin Comercial</p></div>
-      <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar"><p>Linha Bar</p></div>
-    </div>
-  </section>
-  
+        <!-- Duplicados manualmente -->
+        <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário">
+          <p>Linha Mobiliário</p>
+        </div>
+        <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines">
+          <p>Linha Vitrines</p>
+        </div>
+        <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição">
+          <p>Linha Distribuição</p>
+        </div>
+        <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção">
+          <p>Linha Cocção</p>
+        </div>
+        <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial">
+          <p>Linha Carin Comercial</p>
+        </div>
+        <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar">
+          <p>Linha Bar</p>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
   <footer class="footer">
     <div class="footer-conteudo">
-  
+
       <!-- Pagamento -->
       <div class="pagamentos">
         <h4>Formas de pagamento</h4>
@@ -101,7 +122,7 @@
           <i class="fa-solid fa-money-bill-wave"></i> <!-- Usado como Pix genérico -->
         </div>
       </div>
-  
+
       <!-- Selo de confiança -->
       <div class="selo-confianca">
         <h4>Site seguro</h4>
@@ -110,7 +131,7 @@
           <span>Compra protegida</span>
         </div>
       </div>
-  
+
       <!-- Contato e redes sociais -->
       <div class="contatof">
         <h4>Fale conosco</h4>
@@ -119,17 +140,17 @@
           <p><i class="fa-solid fa-envelope"></i> contato@comercialzero15.com.br</p>
         </div>
         <div class="redes-sociais">
-          <a href="#" ><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#" ><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" ><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
         </div>
       </div>
-  
+      <div class="direitos">
+        <p>&copy; 2025 Comercial Zero15 - Todos os direitos reservados.</p>
+      </div>
     </div>
-  
-    <div class="direitos">
-      <p>&copy; 2025 Comercial Zero15 - Todos os direitos reservados.</p>
-    </div>
+
   </footer>
 </body>
+
 </html>
