--- a/freezers.html
+++ b/freezers.html
@@ -16,18 +16,17 @@
 
 <body>
   <header>
-    <div class="menu-toggle">
+    <div class="menu-toggle" id="menu-toggle">
       ☰
     </div>
     <div class="logo">
       <a href="index.html">
-        <img  src="img/logo.png" alt="Logo" />
+        <img src="img/logo.png" alt="Logo" />
       </a>
     </div>
-    <nav>
+    <nav id="nav">
       <ul class="menu">
         <li><a href="index.html" >Home</a></li>
-        
         <li class="dropdown">
           <a href="#" class="active">Produtos</a>
           <ul class="submenu">
@@ -36,17 +35,18 @@
             <li><a href="#">Comercial</a></li>
             <li><a href="#">Distribuição</a></li>
             <li><a href="freezers.html">Freezers</a></li>
-            <li><a href="vitrines.html">Vitrines</a></li> 
+            <li><a href="vitrines.html">Vitrines</a></li>
           </ul>
         </li>
         <li><a href="sobre.html">Sobre nós</a></li>
       </ul>
       <div class="contato">
-        <a href="https://wa.me/5515996404285?text=Ol%C3%A1%2C%20gostaria%20de%20realizar%20um%20or%C3%A7amento%21" target="_blank">
+        <a href="https://wa.me/5515996404285?text=Ol%C3%A1%2C%20gostaria%20de%20realizar%20um%20or%C3%A7amento%21"
+          target="_blank">
           <img src="img/whats.png" alt="WhatsApp" /> Entre em contato
         </a>
       </div>
-    </nav>  
+    </nav>
   </header>
   <section class="produto-destaque">
     <div class="info-produto">
