--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <div class="menu-toggle">
+    <div class="menu-toggle" id="menu-toggle">
       ☰
     </div>
     <div class="logo">
@@ -24,10 +24,9 @@
         <img src="img/logo.png" alt="Logo" />
       </a>
     </div>
-    <nav>
+    <nav id="nav">
       <ul class="menu">
         <li><a href="index.html" class="active">Home</a></li>
-
         <li class="dropdown">
           <a href="#">Produtos</a>
           <ul class="submenu">
@@ -49,6 +48,7 @@
       </div>
     </nav>
   </header>
+  
 
   <main class="main">
     <section class="banner">
