Correção do toggle

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="menu">
         <li><a href="index.html" class="active">Home</a></li>
         <li class="dropdown">
-          <a href="#">Produtos</a>
+          <a href="#" id="toggle-produtos">Produtos</a>
           <ul class="submenu">
             <li><a href="bar.html">Bar</a></li>
             <li><a href="coccao.html">Cocção</a></li>
