--- a/bar.html
+++ b/bar.html
@@ -28,7 +28,7 @@
       <ul class="menu">
         <li><a href="index.html" >Home</a></li>
         <li class="dropdown" >
-          <a href="#" class="active">Produtos</a>
+          <a href="#" class="active" id="toggle-produtos">Produtos</a>
           <ul class="submenu">
             <li><a href="bar.html">Bar</a></li>
             <li><a href="coccao.html">Cocção</a></li>
