--- a/bar.html
+++ b/bar.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <div class="menu-toggle" id="menu-toggle">
-      ☰
+      <i class="fa-solid fa-bars"></i>
     </div>
     <div class="logo">
       <a href="index.html">
