--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
         <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário">
           <p>Linha Mobiliário</p>
         </div>
-        <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines">
+        <div class="produto"><img src="img/carrosel/CATEGORA - VITRINES.png" alt="Linha Vitrines">
           <p>Linha Vitrines</p>
         </div>
         <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição">
           <p>Linha Distribuição</p>
         </div>
-        <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção">
+        <div class="produto"><img src="img/carrosel/CATEGORIA - LINHA 900.png" alt="Linha Cocção">
           <p>Linha Cocção</p>
         </div>
         <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial">
           <p>Linha Carin Comercial</p>
         </div>
-        <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar">
+        <div class="produto"><img src="img/carrosel/BAR STATION.png" alt="Linha Bar">
           <p>Linha Bar</p>
         </div>
 
@@ -92,19 +92,19 @@
         <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário">
           <p>Linha Mobiliário</p>
         </div>
-        <div class="produto"><img src="img/carrosel/VITRINE  REFRIGERADA.png" alt="Linha Vitrines">
+        <div class="produto"><img src="img/carrosel/CATEGORA - VITRINES.png" alt="Linha Vitrines">
           <p>Linha Vitrines</p>
         </div>
         <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição">
           <p>Linha Distribuição</p>
         </div>
-        <div class="produto"><img src="img/coccao/FG91-B4P.png" alt="Linha Cocção">
+        <div class="produto"><img src="img/carrosel/CATEGORIA - LINHA 900.png" alt="Linha Cocção">
           <p>Linha Cocção</p>
         </div>
         <div class="produto"><img src="img/carrosel/COMERCIAL.png" alt="Linha Carin Comercial">
           <p>Linha Carin Comercial</p>
         </div>
-        <div class="produto"><img src="img/bar/BAR STATION.png" alt="Linha Bar">
+        <div class="produto"><img src="img/carrosel/BAR STATION.png" alt="Linha Bar">
           <p>Linha Bar</p>
         </div>
       </div>
