Descrição da linha Comercial

--- a/comercial.html
+++ b/comercial.html
@@ -52,7 +52,7 @@
   <section class="produto-destaque">
     <div class="info-produto">
       <h2>Linha Comercial</h2>
-      <p>Soluções práticas e elegantes para bares, restaurantes e estabelecimentos que valorizam agilidade e estilo. Equipamentos compactos, funcionais e com design moderno para facilitar o atendimento e valorizar seu ambiente..</p>
+      <p>A Linha Comercial é ideal para estabelecimentos que buscam performance, durabilidade e design moderno. Nossos equipamentos são projetados para atender às necessidades de padarias, mercados, lanchonetes, restaurantes e outros negócios do ramo alimentício. Com soluções práticas e robustas, garantimos eficiência no dia a dia e maior produtividade no seu ambiente de trabalho.</p>
     </div>
   </section>
 
