Adição da linha de gela canecas

--- a/comercial.html
+++ b/comercial.html
@@ -32,7 +32,8 @@
           <ul class="submenu">
             <li><a href="bar.html">Bar</a></li>
             <li><a href="coccao.html">Cocção</a></li>
-            <li><a href="#">Comercial</a></li>
+            <li><a href="comercial.html">Comercial</a></li>
+            <li><a href="canecas.html">Congelador de Canecas</a></li>
             <li><a href="#">Distribuição</a></li>
             <li><a href="freezers.html">Freezers</a></li>
             <li><a href="vitrines.html">Vitrines</a></li>
