--- a/bar.html
+++ b/bar.html
@@ -33,6 +33,7 @@
             <li><a href="bar.html">Bar</a></li>
             <li><a href="coccao.html">Cocção</a></li>
             <li><a href="comercial.html">Comercial</a></li>
+            <li><a href="canecas.html">Congelador de Canecas</a></li>
             <li><a href="#">Distribuição</a></li>
             <li><a href="freezers.html">Freezers</a></li>
             <li><a href="vitrines.html">Vitrines</a></li>
@@ -261,4 +262,5 @@
       <p>&copy; 2025 Comercial Zero15 - Todos os direitos reservados.</p>
     </div>
   </footer>
+  
 </body>
