--- a/coccao.html
+++ b/coccao.html
@@ -425,49 +425,57 @@
 
 </section>
 
+
 <footer class="footer">
-    <div class="footer-conteudo">
-  
-      <!-- Pagamento -->
-      <div class="pagamentos">
-        <h4>Formas de pagamento</h4>
-        <div class="icones-pagamento">
-          <i class="fa-brands fa-cc-visa"></i>
-          <i class="fa-brands fa-cc-mastercard"></i>
-          <i class="fa-solid fa-barcode"></i>
-          <i class="fa-solid fa-money-bill-wave"></i> <!-- Usado como Pix genérico -->
-        </div>
+  <div class="footer-conteudo">
+
+    <!-- Pagamentos -->
+    <div class="pagamentos">
+      <h4>Formas de pagamento</h4>
+      <div class="icones-pagamento">
+        <img src="img/pagamentos/visa.png" alt="Visa">
+        <img src="img/pagamentos/mastercard.png" alt="Mastercard">
+        <img src="img/pagamentos/elo.png" alt="Elo">
+        <img src="img/pagamentos/pix.png" alt="Pix">
+        <img src="img/pagamentos/boleto.png" alt="Boleto">
       </div>
-  
-      <!-- Selo de confiança -->
-      <div class="selo-confianca">
-        <h4>Site seguro</h4>
-        <div class="selo">
-          <i class="fa-solid fa-shield-halved"></i>
-          <span>Compra protegida</span>
-        </div>
+
+      <!-- Endereço e CNPJ inseridos abaixo dos ícones de pagamento -->
+      <div class="info-loja">
+        <p><i class="fa-solid fa-location-dot"></i> Rua Exemplo, 123 - Sorocaba/SP</p>
+        <p><i class="fa-solid fa-id-card"></i> CNPJ: 00.000.000/0001-00</p>
       </div>
-  
-      <!-- Contato e redes sociais -->
-      <div class="contatof">
-        <h4>Fale conosco</h4>
-        <div class="contato-itens">
-          <p><i class="fa-brands fa-whatsapp"></i> (15) 99999-9999</p>
-          <p><i class="fa-solid fa-envelope"></i> contato@comercialzero15.com.br</p>
-        </div>
-        <div class="redes-sociais">
-          <a href="#" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="#" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-        </div>
-      </div>
-  
     </div>
-  
-    <div class="direitos">
-      <p>&copy; 2025 Comercial Zero15 - Todos os direitos reservados.</p>
+
+    <!-- Selo de confiança -->
+    <div class="selo-confianca">
+      <h4>Site seguro</h4>
+      <div class="selo">
+        <img src="img/site-seguro.webp" alt="Site Seguro">
+      </div>
     </div>
-  </footer>
+
+    <!-- Contato e redes sociais -->
+    <div class="contatof">
+      <h4>Fale conosco</h4>
+      <div class="contato-itens">
+        <p><i class="fa-brands fa-whatsapp"></i> (15) 99640-4285</p>
+        <p><i class="fa-solid fa-envelope"></i> contato@comercialzero15.com.br</p>
+      </div>
+      <div class="redes-sociais">
+        <a href="#"><img src="img/redes/facebook.png" alt="Facebook"></a>
+        <a href="#"><img src="img/redes/instagram.png" alt="Instagram"></a>
+        <a href="#"><img src="img/redes/whatsapp.png" alt="WhatsApp"></a>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Direitos -->
+  <div class="direitos">
+    <p>&copy; 2025 Comercial Zero15 - Todos os direitos reservados.</p>
+  </div>
+</footer>
 
   </body>
   </html>
