Correção da página inicial

--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
   
 
   <main class="main">
-    <section class="banner">
+    <section class="banner-container">
+      <div class="banner">
+        </div>
       <div class="subtitulo">
-        <h1>Soluções Industriais para sua Empresa</h1>
+        <h1>Soluções Industriais para <br>sua Empresa</h1>
         <h2>Freezers, Congelador de canecas<br> Vitrines, Refrigeradores, Fogões e Chapas</h2>
         <div class="botao-banner">
           <a href="https://wa.me/5515996404285?text=Ol%C3%A1%2C%20gostaria%20de%20realizar%20um%20or%C3%A7amento%21"
@@ -67,6 +69,7 @@
         </div>
       </div>
     </section>
+
     <section class="carrossel-produtos">
       <div class="container-produtos" id="slider">
         <!-- Lista original -->
