Adicionado a seção ´Sobre nós´

--- a/sobre.html
+++ b/sobre.html
@@ -5,11 +5,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Comercial Zero 15</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="style/footer.css">
   <link rel="stylesheet" href="style/style.css" />
   <link rel="stylesheet" href="style/carrosel.css">
   <link rel="stylesheet" href="style/menu.css">
+  <link rel="stylesheet" href="style/sobre.css">
   <link rel="icon" href="img/logoJ.png" type="image/png">
   <script src="script/script.js" defer></script>
 </head>
@@ -49,6 +53,115 @@
       </div>
     </nav>
   </header>
-  
-  
- 
+
+
+  <section class="sobre-nos">
+    <div class="conteudo">
+      <div class="texto">
+        <h2>Sobre Nós</h2>
+        <p>
+          A <strong>Comercial Zero 15</strong> é especialista na fabricação e comercialização de equipamentos para
+          refrigeração, cocção, mobiliário e soluções completas para cozinhas profissionais. Atuamos com foco em
+          qualidade, durabilidade e eficiência para atender desde pequenos comércios até ambientes industriais.
+        </p>
+        <p>
+          Com expertise no setor e um atendimento personalizado, entregamos projetos sob medida que aliam inovação,
+          resistência e excelente custo-benefício. Nosso compromisso é levar mais performance para o seu negócio.
+        </p>
+
+        <div class="diferenciais">
+          <div class="card">
+            <h4>🚀 Inovação</h4>
+            <p>Soluções modernas e eficientes para o seu negócio.</p>
+          </div>
+          <div class="card">
+            <h4>📞 Suporte Especializado</h4>
+            <p>Equipe técnica preparada para oferecer orientação, manutenção e apoio desde a compra até o pós-venda.</p>
+          </div>
+          <div class="card">
+            <h4>🤝 Compromisso</h4>
+            <p>Relação de confiança com nossos clientes e parceiros.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="mapa-container">
+        <div class="mapa-wrapper">
+          <h3> Onde estamos</h3>
+        <div class="mapa">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3661.0413563738584!2d-47.41709402545165!3d-23.422873178895184!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf5f03621b4005%3A0xf81ff35f8e4efee!2sR.%20Ter%C3%A9zio%20Gon%C3%A7alves%20de%20Camargo%2C%20195%20-%20%C3%89den%2C%20Sorocaba%20-%20SP%2C%2018103-010!5e0!3m2!1sen!2sbr!4v1745330661818!5m2!1sen!2sbr"
+            width="600" 
+            height="450" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+  <footer class="footer">
+    <div class="footer-conteudo">
+
+      <!-- Pagamentos -->
+      <div class="pagamentos">
+        <h4>Formas de pagamento</h4>
+        <div class="icones-pagamento">
+          <img src="img/pagamentos/visa.png" alt="Visa">
+          <img src="img/pagamentos/mastercard.png" alt="Mastercard">
+          <img src="img/pagamentos/elo.png" alt="Elo">
+          <img src="img/pagamentos/pix.png" alt="Pix">
+          <img src="img/pagamentos/boleto.png" alt="Boleto">
+        </div>
+
+        <!-- Endereço e CNPJ inseridos abaixo dos ícones de pagamento -->
+        <div class="info-loja">
+          <p><i class="fa-solid fa-location-dot"></i> Rua Exemplo, 123 - Sorocaba/SP</p>
+          <p><i class="fa-solid fa-id-card"></i> CNPJ: 00.000.000/0001-00</p>
+        </div>
+      </div>
+
+      <!-- Selo de confiança -->
+      <div class="selo-confianca">
+        <h4>Site seguro</h4>
+        <div class="selo">
+          <img src="img/site-seguro.webp" alt="Site Seguro">
+        </div>
+      </div>
+
+      <!-- Contato e redes sociais -->
+      <div class="contatof">
+        <h4>Fale conosco</h4>
+        <div class="contato-itens">
+          <p><i class="fa-brands fa-whatsapp"></i> (15) 99640-4285</p>
+          <p><i class="fa-solid fa-envelope"></i> contato@comercialzero15.com.br</p>
+        </div>
+        <div class="redes-sociais">
+          <a href="#"><img src="img/redes/facebook.png" alt="Facebook"></a>
+          <a href="#"><img src="img/redes/instagram.png" alt="Instagram"></a>
+          <a href="#"><img src="img/redes/whatsapp.png" alt="WhatsApp"></a>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Direitos -->
+    <div class="direitos">
+      <p>&copy; 2025 Comercial Zero15 - Todos os direitos reservados.</p>
+    </div>
+  </footer>
+
+
+</body>
+
+</html>
