Adição da linha Mobiliario

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="coccao.html">Cocção</a></li>
             <li><a href="comercial.html">Comercial</a></li>
             <li><a href="canecas.html">Congelador de Canecas</a></li>
-            <li><a href="#">Distribuição</a></li>
+            <li><a href="mobiliario.html">Mobiliário</a></li>
             <li><a href="freezers.html">Freezers</a></li>
             <li><a href="vitrines.html">Vitrines</a></li>
           </ul>
@@ -76,7 +76,7 @@
         <div class="produto"><img src="img/carrosel/GABINETE INFERIOR.png" alt="Linha Mobiliário">
           <p>Linha Mobiliário</p>
         </div>
-        <div class="produto"><img src="img/carrosel/CATEGORA - VITRINES.png" alt="Linha Vitrines">
+        <div class="produto" ><a href="vitrines.html"><img src="img/carrosel/CATEGORA - VITRINES.png" alt="Linha Vitrines"></a>
           <p>Linha Vitrines</p>
         </div>
         <div class="produto"><img src="img/carrosel/BALCÃO DE DISTRIBUIÇÃO.png" alt="Linha Distribuição">
@@ -158,6 +158,7 @@
           <a href="#"><img src="img/redes/whatsapp.png" alt="WhatsApp"></a>
         </div>
       </div>
+      
   
     </div>
   
