--- a/sobre.html
+++ b/sobre.html
@@ -38,7 +38,7 @@
             <li><a href="coccao.html">Cocção</a></li>
             <li><a href="comercial.html">Comercial</a></li>
             <li><a href="canecas.html">Congelador de Canecas</a></li>
-            <li><a href="#">Distribuição</a></li>
+            <li><a href="mobiliario.html">Mobiliário</a></li>
             <li><a href="freezers.html">Freezers</a></li>
             <li><a href="vitrines.html">Vitrines</a></li>
           </ul>
@@ -163,5 +163,3 @@
 
 
 </body>
-
-</html>
