Correção da descrição mobiliario

--- a/mobiliario.html
+++ b/mobiliario.html
@@ -29,9 +29,9 @@
         </div>
         <nav id="nav">
             <ul class="menu">
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="#" id="toggle-produtos">Produtos</a>
+                    <a href="#" id="toggle-produtos" class="active">Produtos</a>
                     <ul class="submenu">
                         <li><a href="bar.html">Bar</a></li>
                         <li><a href="coccao.html">Cocção</a></li>
@@ -56,8 +56,7 @@
     <section class="produto-destaque">
         <div class="info-produto">
             <h2>Linha Mobiliário</h2>
-            <p>Potência e praticidade para sua cozinha. Equipamentos de cocção robustos e eficientes, ideais para alto
-                desempenho e preparo ágil de alimentos.</p>
+            <p>Projetamos e fabricamos mobiliário em aço inox de alta resistência, ideal para cozinhas industriais, restaurantes e estabelecimentos que exigem durabilidade, ergonomia e conformidade com normas sanitárias. Soluções sob medida que otimizam o fluxo operacional e elevam a produtividade.</p>
 
         </div>
     </section>
